# Portfolio

./: .drone.yml  .gitignore  .pages.yml  1password.env  Dockerfile  LICENSE  README.md  astro.config.mjs  dark.js  docker-compose.yml  drizzle.config.js  index.html  main.py  markdoc.config.js  markdoc.config.json  package-lock.json  package.json  pnpm-lock.yaml  projects.js  pyproject.toml  renovate.json  status.js  style.css  vercel.json  vite.config.js  vue.config.js  wrangler.jsonc
.astro/: types.d.ts
.github/: dependabot.yml
.github/workflows/: deploy.yml  main.yml
Website/: dark.js  package-lock.json  status.js  style.css
Website/.github/: FUNDING.yml
contact/: index.html
db/: config.ts
public/: index.html  robots.txt
scripts/: dark.js  projects.js
src/: App.vue  _utils.js  env.d.ts  main.js
src/assets/: projects.json
src/components/: AvailabilityCalendar.vue  AvailabilityCalender.vue  Background.vue  Contact copy.vue  Contact.astro  Contact.vue  ContactForm.astro  Error.astro  Footer.astro  Header.astro  Header.vue  Message.astro  Projects.astro  Projects.vue  Skills.vue  ThemeSelector.astro  WavyDivider.astro
src/db/: index.js  schema.js
src/layouts/: BlogPosts.astro  Main.astro  Markdown.astro
src/pages/: 404.astro  Index copy.vue  Index.vue  NotFound.vue  availability.astro  contact.astro  discord.astro  gear.astro  index.astro  privacy.mdx
src/router/: index.js
src/styles/: Contact.css  Header.css  Projects.css  Skills.css  global.scss  markdown.scss  (+2 more)
styles/: style.css
templates/: contact.html  index.html
website/: README.md
(+52 files in other folders)
