[tool.poetry]
name = "repl_python3_Website"
version = "0.1.0"
description = ""
authors = ["jackbailey <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
Flask-Cors = "^3.0.10"
gevent = "^21.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
